# libdna

./: .clang-format  .gitignore  .travis.yml  License.md  Makefile  Makefile.Maintainer  Readme.md  meson.build  meson_options.txt  mkdocs.yml  readthedocs.yml
.github/workflows/: on-push.yml
bench/: Bcommon.cxx  Bcompare.cxx  Bcompare_rev.cxx  Bcompare_wg.cxx  Bcount.cxx  Bdnax_to_dna4.cxx  Bfill_random.cxx  Bfind_first_not.cxx  Bmismatch.cxx  Bpack.cxx  Breplace.cxx  Brevcomp.cxx  Bstrconstr.cxx  Btranslate.cxx  Makefile  common.cxx  compare.cxx  compare_rev.cxx  count.cxx  despace_tables.h  dna4_revcomp.cxx  find_first_not.cxx  hash.cxx  mismatch.cxx  pack.cxx  replace.cxx  revcomp.cxx
bench2/: Makefile  revcomp  revcomp.cxx
docs/: api.md  betterthanx.md  capi.md  cxxapi.md  dna4_count_mismatches.3.md  dna4_count_mismatches_rc.3.md  dna4_count_mismatches_rev.3.md  dna4_fill_random.3.md  dna4_pack_2bits.3.md  dna4_revcomp.3.md  dna4_unpack_2bits.3.md  dna_ihash.3.md  dna_ihash_invert.3.md  dnax_count.3.md  dnax_count_mismatches.3.md  dnax_extract_dna4.3.md  dnax_find_first_mismatch.3.md  dnax_find_first_not_of.3.md  dnax_find_first_of.3.md  dnax_find_mismatch.3.md  dnax_pack_4bits.3.md  dnax_replace.3.md  dnax_revcomp.3.md  dnax_translate.3.md  dnax_unpack_4bits.3.md  drunken.md  examples.md  fasta.md  geneticcode.7.md  index.md  iupac.7.md  random.md  snippets.md
examples/: dna4_kmers.c  drunken.c  edit_distance.cxx  fasta.c  gc_content.cxx  geneticcode_table.cxx  kasai.c  random.c
include/: dna  dna.h  dna.hpp
include/kloetzl/: dna.hpp
man/: dna4_count_mismatches.3  dna4_count_mismatches_rc.3  dna4_count_mismatches_rev.3  dna4_fill_random.3  dna4_pack_2bits.3  dna4_revcomp.3  dna4_unpack_2bits.3  dna_ihash.3  dna_ihash_invert.3  dnax_count.3  dnax_count_mismatches.3  dnax_extract_dna4.3  dnax_find_first_mismatch.3  dnax_find_first_not_of.3  dnax_find_first_of.3  dnax_find_mismatch.3  dnax_pack_4bits.3  dnax_replace.3  dnax_revcomp.3  dnax_translate.3  dnax_unpack_4bits.3  geneticcode.7  iupac.7
meta/: validate-source.py
misc/: sim.c
python/: Readme.md  pyproject.toml
python/examples/: libdna  random.py
python/libdna/: dna.py  dna4.py  dnax.py  test_dna.py  test_dna4.py  test_dnax.py
rttest/: Makefile  RTcxxversion.cxx  RTrevcomp.c  RTversion.c
rust/: Cargo.toml
rust/benches/: Bcount_mismatches.rs  Brevcomp.rs
rust/src/: lib.rs  libdna_ffi.rs  native.rs  oldmain.rs
rust/src/libdna_ffi/: dna.rs  dna4.rs  dnax.rs
src/: Makefile  config.h.in  dna4_count_mismatches.c  dna4_count_mismatches_avx2.c  dna4_count_mismatches_avx512.c  dna4_count_mismatches_neon.c  dna4_count_mismatches_rc.c  dna4_count_mismatches_rc_avx2.c  dna4_count_mismatches_rc_sse42.c  dna4_count_mismatches_rc_x86.c  dna4_count_mismatches_rev.c  dna4_count_mismatches_rev_avx2.c  dna4_count_mismatches_rev_sse42.c  dna4_count_mismatches_rev_x86.c  dna4_count_mismatches_sse42.c  dna4_count_mismatches_x86.c  dna4_evodist_jc.c  dna4_evodist_jc_avx2.c  dna4_evodist_jc_avx512.c  dna4_evodist_jc_sse2.c  dna4_evodist_k80.c  dna4_fill_random.c  dna4_fill_random_avx2.c  dna4_fill_random_sse42.c  dna4_fill_random_x86.c  dna4_gc_content.c  dna4_hash.c  dna4_hash_unordered.c  dna4_pack.c  dna4_pack_2bits.c  dna4_pack_unordered.c  dna4_revcomp.c  dna4_revcomp_avx2.c  dna4_revcomp_neon.c  dna4_revcomp_sse42.c  dna4_revcomp_x86.c  dna4_unpack_2bits.c  dna_ihash.c  dna_ihash_invert.c  dna_internal.h  (+27 more)
subprojects/: google-benchmark.wrap
test/: Makefile  Tcommon.h  Tcompare.cxx  Tcount_mismatches_rc.cxx  Tcount_mismatches_rev.cxx  Tdna4_pack_2bits.cxx  Tdna4_revcomp.cxx  Tdnax_extract_dna4.cxx  Tdnax_pack_4bits.cxx  Tdnax_revcomp.cxx  Tfill_random.cxx  Tifunc.cxx  Tihash.cxx  Tsimple.cxx  Ttranslate.c  Ttranslate.cxx  catch.hpp  simple.c  translate.c
