[tool.poetry]
name = "libdna"
version = "1.3"
description = "Essential Functions for DNA Manipulation"
authors = ["Fabian Klötzl <fabian-libdna@kloetzl.info>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
